Fix preloader bug on small screen

--- a/src/Components/Preloader/Preloader.module.css
+++ b/src/Components/Preloader/Preloader.module.css
@@ -6,3 +6,13 @@
 .preloader {
     margin: auto;
 }
+	
+@media (max-height: 700px) {
+    .preloaderBlock {
+        position: relative;
+        top: 0;
+        left: 0;
+        justify-self: center;
+        margin-top: 50px;
+    }
+}
